# vedicnumeroAI

./: .env.example  .gitignore  .vercelignore  About us.html  Personal-Reading.html  Personal-Reading.js  Pricing.html  Pricing.js  Privacy-Policy.html  TODO.md  Terms-Conditions.html  api-config.js  app.py  chatbot.css  chatbot.js  check.py  contact.html  face_analysis.py  face_reading.css  face_reading.html  index.html  login.html  moolank.css  moolank.html  numerology_service.py  payment-window.html  pyproject.toml  requirements.txt  signup.css  signup.html  start-backend.bat  test_face_api.py  vercel.json
api/: database.py  main.py  pyproject.toml  requirements.txt
api/%storage%/vedicnumeroai/: $.metadata
api/auth/: security.py
api/models/: user.py
api/routes/: debug.py  face.py  numerology.py
api/services/: face.py
api/tests/: test_auth.py  test_numerology.py
api/tests/mongita_db/: $.metadata
api/tests/mongita_db/vedicnumeroai.face_results/: $.metadata
api/tests/mongita_db/vedicnumeroai.users/: $.data  $.file_attrs  $.metadata
backend/: database.py  main.py  requirements.txt
backend/%storage%/: $.metadata
backend/%storage%/vedicnumeroai.users/: $.data  $.file_attrs  (+1 more)
backend/auth/: dependencies.py
backend/models/: numerology.py
backend/routes/: auth.py  chat.py  face.py
backend/services/: face.py  numerology.py
backend/tests/: conftest.py  test_face_read.py
database/: users.db
static/: index2.html  script.js  style.css  style2.css
static/js/: numerology-chat-integration.js
templates/: face_reading.html  index.html  result.html
(+5 files in other folders)
