[project]
name = "api"
version = "0.1.0"
description = "Vedic Numero AI API"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pymongo",
    "python-jose",
    "passlib[bcrypt]",
    "python-multipart",
    "opencv-python-headless",
    "pillow",
    "numpy",
    "email-validator",
    "mongomock",
]

[tool.uv]
managed = true
